# aspp-cw1

./: .gitignore  CMakeCache.txt  README.md  buildscript.sh  make_submission.sh  profile-ncu.yml  profile-nsys.yml  run.yml
benchmark/: case1.md
build-dev/: CMakeCache.txt
logs/: 128-100-10.txt  128-100-100.txt  128-100-20.txt  128-100-25.txt  128-100-50.txt  256-100-10.txt  256-100-100.txt  256-100-20.txt  256-100-25.txt  256-100-50.txt  32-100-10.txt  32-100-100.txt  32-100-20.txt  32-100-25.txt  32-100-50.txt  512-100-100.txt  64-100-10.txt  64-100-100.txt  64-100-20.txt  64-100-25.txt  64-100-50.txt
src/: CMakeLists.txt  h5io.cpp  h5io.h  main.cpp  ndarray.h  params.h  util.h  wave_cpu.cpp  wave_cpu.h  wave_cuda.cu  wave_cuda.h  wave_omp.cpp  wave_omp.h
test-codes/: main.cc
